[package]
name = "ttvy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["http1", "json", "original-uri", "tokio"]}
colored = "2.1.0"
fast_websocket_client = "0.2.0"
hex_color = "3.0.0"
serde = { version = "1.0.197", features = ["std", "derive"] }
serde_json = "1.0.114"
tokio = { version = "^1.36.0", features = ["full"] }
