[package]
name = "ttvy"
authors = ["tsorak"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttvy_core = { git = "https://github.com/tsorak/ttvy_core.git" }
tokio = { version = "^1.36.0", features = ["full"] }
hex_color = "^3.0.0"
colored = "^2.1.0"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
